--- a/css/tooplate-style.css
+++ b/css/tooplate-style.css
@@ -6,13 +6,16 @@ http://www.tooplate.com/view/2092-shelf
 
 */
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	/* font-size: 18px; */
 	background: url('../img/shelf-bg.jpg');
 	padding: 0 15px;
 	overflow-x: hidden;
-	/* min-width: 350px; */
 	min-width: 400px;
 }
 
@@ -20,7 +23,6 @@ a,
 button {
 	transition: all 0.3s ease;
 }
-
 
 a:hover,
 a:focus {
@@ -35,6 +37,10 @@ h4,
 h5,
 h6 {
 	line-height: 1.4;
+}
+
+h5 {
+	font-style: oblique;
 }
 
 p {
